--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
 	"files.exclude": {
-		"out": false,
+		"out": true,
 		"src/test": true,
-		"node_modules": true
+		"node_modules": true,
+		"releases": true,
+		".github": true
 	},
 	"search.exclude": {
-		"out": true
+		"out": true,
+		"dist": true
 	},
 	// Turn off tsc task auto detection since we have the necessary tasks as npm scripts
-	"typescript.tsc.autoDetect": "off"
+	"typescript.tsc.autoDetect": "off",
+	"cSpell.words": ["lfcr", "sassconfig"]
 }
