--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:vscode-sassc.singleCompilationCompileCurrentFile"
+		"*"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -25,6 +25,18 @@
 					"dark": "res/icon/compile-single-file/sassc-compile-single-file@dark.svg",
 					"light": "res/icon/compile-single-file/sassc-compile-single-file@light.svg"
 				}
+			},
+			{
+				"command": "vscode-sassc.compileProject",
+				"title": "Compile Project",
+				"enablement": "vscode-sassc.isSassProject",
+				"category": "VSCode SASSC"
+			},
+			{
+				"command": "vscode-sassc.watchProject",
+				"title": "Watch Project",
+				"enablement": "vscode-sassc.isSassProject && resourceFilename == sassconfig.json",
+				"category": "VSCode SASSC"
 			}
 		],
 		"menus": {
@@ -34,7 +46,24 @@
 					"when": "editorLangId == scss",
 					"group": "navigation"
 				}
+			],
+			"explorer/context": [
+				{
+					"command": "vscode-sassc.watchProject",
+					"when": "vscode-sassc.isSassProject && resourceFilename == sassconfig.json",
+					"group": "2_workspace"
+				}
 			]
+		},
+		"configuration": {
+			"title": "VSCode SASSC",
+			"properties": {
+				"vscode-sassc.singleCompilation.useIndentedStyle": {
+					"type": "boolean",
+					"default": false,
+					"description": "Specifies whether to use sass's indented style or not"
+				}
+			}
 		}
 	},
 	"scripts": {
